syntax = "proto3";

package helloworld;

option go_package ="./proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Server streaming
  rpc SayHelloAgain (HelloRequest) returns (stream HelloReply) {}
  // Client streaming
  rpc SayHelloStream (stream HelloRequest) returns (HelloReply) {}
  // Bidirectional streaming
  rpc SayHelloStreamAll (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
} 